# nostr-vpn

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.e2e  Dockerfile.tauri-driver-e2e  README.md  docker-compose.e2e.yml  docker-compose.exit-node-e2e.yml  docker-compose.nat-e2e.yml  docker-compose.relay-fallback.e2e.yml
crates/nostr-vpn-gui/src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json  tauri.ios.conf.json  tauri.windows.conf.json
crates/nostr-vpn-gui/src-tauri/capabilities/: default.json  desktop.json
crates/nostr-vpn-gui/src-tauri/icons/: icon.icns
crates/nostr-vpn-gui/src-tauri/src/: android_session.rs  android_session_runtime.rs  app_runtime.rs  backend_configuration.rs  backend_service.rs  gui_launch.rs  ios_packet_tunnel.rs  ios_vpn.rs  lan_pairing.rs  lib.rs  main.rs  mobile_runtime_state.rs  path_resolution.rs  peer_state.rs  relay_operator_state.rs  tauri_commands.rs  tray_runtime.rs
crates/nostr-vpn-gui/src-tauri/src/ios_packet_tunnel/: ios_tunnel_planning.rs
crates/nostr-vpn-gui/src-tauri/windows/: installer-hooks.nsh
crates/nostr-vpn-relay/: Cargo.toml
crates/nostr-vpn-relay/src/: main.rs
scripts/: e2e-active-network-docker.sh  e2e-connect-docker.sh  e2e-divergent-roster-docker.sh  e2e-docker.sh  e2e-exit-node-docker.sh  e2e-nat-docker.sh  e2e-relay-fallback-docker.sh  e2e-roster-admin-docker.sh  e2e-tauri-driver-docker.sh  local-release-lib.mjs  local-release.mjs  local-release.test.mjs  umbrel-release.mjs  umbrel-release.test.mjs  utm-vm-deploy.sh  utm-vm-network.sh  utm-vm-up.sh
umbrel/: Dockerfile  (+4 more)
(+120 files in other folders)
