[package]
name = "nostr-vpn-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "nostr_vpn_gui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3" }

[dependencies]
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nostr-sdk.workspace = true
tauri = { version = "2.6", features = ["tray-icon"] }

nostr-vpn-core = { path = "../../nostr-vpn-core" }
